apps/inquiry-backend/k8s/overlays/doks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inquiry-backend-service
  namespace: banking-apps
  labels:
    app: inquiry-backend
spec:
  type: ClusterIP
  selector:
    app: inquiry-backend
  ports:
    - name: java-http-metrics
      protocol: TCP
      port: 80
      targetPort: 8080
