apps/inquiry-backend/k8s/overlays/doks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-api-ingress
  namespace: banking-apps
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /api/v1/balance/$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # Keepalive connections προς το backend
    nginx.ingress.kubernetes.io/upstream-keepalive-connections: "100"
    nginx.ingress.kubernetes.io/upstream-keepalive-timeout: "60"
    # Timeouts
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    # Connection limits
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  ingressClassName: nginx
  rules:
    - host: banking-thesis.rmat.gr # 1 :  Domain
      http:
        paths:
          - path: /(.*) # 2:  Path
            pathType: ImplementationSpecific
            backend:
              service:
                name: inquiry-backend-service # 3: Destination
                port:
                  number: 80
